Fix loona command